Minor changes. Added docker compose

--- a/backend/src/main/resources/user.properties
+++ b/backend/src/main/resources/user.properties
@@ -1,4 +1,2 @@
-user.admin.login = admin
-user.admin.password = password
-user.john.login = john
-user.john.password = password
+admin.username: ${admin_name}
+admin.password: ${admin_password}
