--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/contactdb
-    username: postgres
-    password: password
+    url: jdbc:postgresql://localhost:5432/${db_name}
+    username: ${db_user}
+    password: ${db_password}
   jpa:
     database-platform: org.hibernate.dialect.PosgreSQLInnoDBDialect
     generate-ddl: true
@@ -20,7 +20,6 @@ spring:
       max-file-size: 1000MB
       max-request-size: 1000MB
   mvc:
-    throw-exception-if-no-handler-found: true
     async:
       request-timeout: 3600000
 server:
